fixed tetris letter contrast issue

--- a/css/page_format.css
+++ b/css/page_format.css
@@ -191,7 +191,7 @@ span {
 
 .tetris-i {
     /* purple */
-    color: #A000A0;
+    color: #b911b9;
 }
 
 .tetris-s {
